[package]
name = "su3"
description = "SU3 file en-/decoder"
categories = ["parser-implementations"]
version = "0.2.0"
repository = "https://github.com/styx-rs/su3"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = ["assets/"]

[dependencies]
deku = "0.15.0"
flate2 = "1.0.25"

[features]
