[package]
name = "su3"
description = "SU3 file en-/decoder"
categories = ["parser-implementations"]
version = "0.1.0"
repository = "https://github.com/styx-rs/su3"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = ["assets/"]

[dependencies]
cookie-factory = { version = "0.3.2", default-features = false }
flate2 = { version = "1.0.24", optional = true }
nom = { version = "7.1.1", default-features = false }

[features]
default = ["std"]
compression = ["flate2", "std"]
std = ["cookie-factory/std", "nom/std"]
